--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.13.4",
     "lucide-react": "^0.544.0",
@@ -18,6 +19,7 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.13"
   },
